--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,13 @@
-spring.application.name=skypeak-hotel
 server.port=8080
+
+spring.application.name=skypeak-hotel
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
+
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.yaml
