feat: initialize roles and admin user on startup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,11 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.yaml
+
+role.admin=ADMIN
+role.manager=MANAGER
+role.user=USER
+
+admin.email=${ADMIN_EMAIL}
+admin.password=${ADMIN_PASSWORD}
+admin.status=${ADMIN_STATUS}
