--- a/docker/.env.example
+++ b/docker/.env.example
@@ -5,3 +5,7 @@ POSTGRES_PASSWORD=your_password
 DB_URL=jdbc:postgresql://localhost:5432/your_db
 DB_USERNAME=your_name
 DB_PASSWORD=your_password
+
+ADMIN_EMAIL=your_email@example.com
+ADMIN_PASSWORD=your_password
+ADMIN_STATUS=ACTIVE
