--- a/docker/.env.example
+++ b/docker/.env.example
@@ -9,3 +9,5 @@ DB_PASSWORD=your_password
 ADMIN_EMAIL=your_email@example.com
 ADMIN_PASSWORD=your_password
 ADMIN_STATUS=ACTIVE
+
+JWT_TOKEN=very-long-super-secret-key-32-chars-min
