--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ role.user=USER
 admin.email=${ADMIN_EMAIL}
 admin.password=${ADMIN_PASSWORD}
 admin.status=${ADMIN_STATUS}
+
+jwt.secret=${JWT_TOKEN}
+jwt.expiration-ms=3600000
